# Mathematical-expression-evaluator

./: .gitignore  CHANGELOG.md  Proyecto-final.cabal  Readme.md  setUp.sh  test
Proyecto final/: CHANGELOG.md  Evaluator.hi  Parser.hi  Proyecto-final.cabal  evaluator.hs  main.hi  main.hs  parser.hs
Proyecto final/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Proyecto final/src/: Binary.hs  Evaluator.hs  GUI.hs  HexParser.hs  Main.hs  Parser.hs
Proyecto-final/src/: Binary.hs  GUI.hs  HexEvaluator.hs  HexParser.hs
carpeta/: HexEvaluator.hi  HexParser.hi  Main.hs  main  main.hi
src/: Binary.hs  Evaluator.hs  GUI.hs  HexEvaluator.hs  HexParser.hs  Main.hs  Parser.hs
