cabal-version:       >=1.10
name:                Proyecto-final
version:             0.1.0.0
category:            Mathematics, GUI
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable Proyecto-final
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       Evaluator, Parser, GUI
  build-depends:       
      base >=4.13,   
      threepenny-gui >=0.9,   
      parsec >=3.1            
  default-language:    Haskell2010
  ghc-options:         -Wall