cabal-version:       >=1.10
name:                Proyecto-final
version:             0.1.0.0
synopsis:            Evaluador de expresiones matem치ticas con interfaz gr치fica
description:         Un proyecto para evaluar expresiones matem치ticas y visualizarlas en una ventana gr치fica usando Threepenny-GUI.
license:             MIT
-- license-file:        LICENSE
author:              "Tu Nombre"
maintainer:          "tu.email@ejemplo.com"
copyright:           2025, Tu Nombre
category:            Mathematics, GUI
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable Proyecto-final
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       Evaluator, Parser, GUI
  build-depends:       
      base >=4.13 && <4.18,   
      threepenny-gui >=0.9,   
      parsec >=3.1            
  default-language:    Haskell2010
  ghc-options:         -Wall